Remove title-wrap padding to fix whitespace on SP tokuten 01

--- a/style.css
+++ b/style.css
@@ -4051,7 +4051,7 @@ body {
   }
 
   .tokuten__title-wrap {
-    padding: 5px 0 0 0;
+    padding: 0;
   }
 
   .tokuten__main-title {
